--- a/index.html
+++ b/index.html
@@ -13,11 +13,37 @@
         h1 {
             color: #333;
         }
+        .link-group {
+            margin-top: 30px;
+            display: inline-block;
+            background: #f7f7f7;
+            padding: 20px 30px;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+        }
+        .link-btn {
+            display: inline-block;
+            margin: 0 10px;
+            padding: 10px 18px;
+            background: #4f8cff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 6px;
+            font-weight: bold;
+            transition: background 0.2s, transform 0.2s;
+        }
+        .link-btn:hover {
+            background: #2563eb;
+            transform: translateY(-2px) scale(1.04);
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to My GitHub Page</h1>
     <p>This is my personal page, built with plain HTML!</p>
-    <a href="https://github.com/ivobos">Visit my GitHub profile</a>
+    <div class="link-group">
+        <a class="link-btn" href="https://ivobos.com/galaga/">GALAGA Project</a>
+        <a class="link-btn" href="https://github.com/ivobos/galaga/blob/main/README.md">Project Prompts</a>
+    </div>
 </body>
 </html>
