--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
     <h1>Welcome to My GitHub Page</h1>
     <p>This is my personal page, built with plain HTML!</p>
     <div class="link-group">
-        <a class="link-btn" href="https://ivobos.com/galaga/">GALAGA Project</a>
+        <a class="link-btn" href="https://ivobos.com/galaga/">GALAGA Vibe Coding Project</a>
         <a class="link-btn" href="https://github.com/ivobos/galaga/blob/main/README.md">Project Prompts</a>
+    </div>
+    <div class="link-group">
+        <a class="link-btn" href="https://ivobos.com/warriors/">Emily's Vibe Coding Project</a>
     </div>
 </body>
 </html>
